--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-CVOMG1OH;Database=AutorizationAPIDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=LAPTOP-CVOMG1OH;Database=AutorizationAPIDB;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
 
   "Logging": {
