CONFIGURACION DE CADENA O SECRETO PARA EL ENVIO DE TOKEN SEGUROS

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,5 +9,17 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApiSettings": {
+
+    "JwtOptions": {
+      "Secret":  "BHJAGDYWEBNMASNHDASUIE-AJKADHSWYESAA-7328YDASKJH7823TE"
+    }
+  }
+
+
+
+
+
+
 }
