Condiguracion de los servicios de jwtOptions  para el manejo de la informacion

--- a/appsettings.json
+++ b/appsettings.json
@@ -13,7 +13,9 @@
   "ApiSettings": {
 
     "JwtOptions": {
-      "Secret":  "BHJAGDYWEBNMASNHDASUIE-AJKADHSWYESAA-7328YDASKJH7823TE"
+      "Secret": "BHJAGDYWEBNMASNHDASUIE-AJKADHSWYESAA-7328YDASKJH7823TE",
+      "Issuer": "micro-auth-api",
+      "Audience": "net-services-client"
     }
   }
 
